--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
+    "multer": "^1.4.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
