--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,7 +19,8 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {},
   "scripts": {
