Meilleure utilisation de dotenv

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,7 @@
 JWT_TOKEN=a0e141b8-e49c-43af-87fb-2753fd6d83ff
 CLIENT_URL=http://localhost:3000
+
+DB_DATABASE="groupomania"
+DB_HOST="localhost"
+DB_PASSWORD ="ssMRhrc68xVReAJtIxFg"
+DB_USER="root"
